--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="net.sylvek.itracing2"
-          android:versionCode="2"
-          android:versionName="1.1">
+          android:versionCode="3"
+          android:versionName="1.2">
 
     <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="21"/>
 
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+    <uses-feature android:name="android.hardware.location" android:required="false"/>
 
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
                  android:theme="@android:style/Theme.DeviceDefault.Light">
@@ -28,6 +31,11 @@
         <receiver android:name=".receivers.StartRingPhone">
             <intent-filter>
                 <action android:name="net.sylvek.itracing2.action.RING_PHONE"/>
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".receivers.CapturePosition">
+            <intent-filter>
+                <action android:name="net.sylvek.itracing2.action.CAPTURE_POSITION"/>
             </intent-filter>
         </receiver>
         <receiver android:name=".receivers.StopRingPhone"/>
