--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="net.sylvek.itracing2"
-          android:versionCode="12"
-          android:versionName="1.12">
+          android:versionCode="13"
+          android:versionName="1.13">
 
     <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="21"/>
 
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
                  android:theme="@android:style/Theme.DeviceDefault.Light">
@@ -28,6 +29,11 @@
                 <action android:name="android.bluetooth.adapter.action.STATE_CHANGED"/>
             </intent-filter>
         </receiver>
+        <receiver android:name=".receivers.StartVibratePhone">
+            <intent-filter>
+                <action android:name="net.sylvek.itracing2.action.VIBRATE_PHONE"/>
+            </intent-filter>
+        </receiver>
         <receiver android:name=".receivers.StartRingPhone">
             <intent-filter>
                 <action android:name="net.sylvek.itracing2.action.RING_PHONE"/>
@@ -39,5 +45,6 @@
             </intent-filter>
         </receiver>
         <receiver android:name=".receivers.StopRingPhone"/>
+        <receiver android:name=".receivers.StopVibratePhone"/>
     </application>
 </manifest>
