--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,6 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+
+# keystore
+sylvek.key
