--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="net.sylvek.itracing2"
-          android:versionCode="14"
-          android:versionName="1.14">
-
-    <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="21"/>
+          package="net.sylvek.itracing2">
 
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     <uses-feature android:name="android.hardware.location" android:required="false"/>
