--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,14 @@
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
                  android:theme="@android:style/Theme.DeviceDefault.Light">
-        <activity android:name=".WelcomeActivity" android:label="@string/app_name">
+        <activity android:name=".DevicesActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".DashboardActivity" android:label="@string/app_name"
+                  android:parentActivityName=".DevicesActivity"/>
         <service android:name=".BluetoothLEService"/>
         <receiver android:name=".receivers.LinkBackground">
             <intent-filter>
