--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,17 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
-                 android:theme="@android:style/Theme.DeviceDefault.Light">
-        <activity android:name=".DevicesActivity">
+                 android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        <activity android:name=".devices.DevicesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DashboardActivity"
-                  android:parentActivityName=".DevicesActivity"/>
-        <activity android:name=".PreferencesActivity" android:label="@string/preferences"
-                  android:parentActivityName=".DevicesActivity"/>
+        <activity android:name=".dashboard.DashboardActivity"
+                  android:parentActivityName=".devices.DevicesActivity"/>
+        <activity android:name=".preferences.PreferencesActivity" android:label="@string/preferences"
+                  android:parentActivityName=".devices.DevicesActivity"/>
         <service android:name=".BluetoothLEService"/>
         <receiver android:name=".receivers.LinkBackground">
             <intent-filter>
