--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+        android:supportsRtl="true"
                  android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         <activity android:name=".devices.DevicesActivity">
             <intent-filter>
