--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,15 +8,19 @@ android {
         applicationId "net.sylvek.itracing2"
         minSdkVersion 18
         targetSdkVersion 21
-        versionCode 62
-        versionName "2.3.6"
+        versionCode 63
+        versionName "2.3.7"
     }
     signingConfigs {
         release {
-            storeFile file(project.keyStore)
-            storePassword project.password
-            keyAlias "android"
-            keyPassword project.password
+
+            if (project.hasProperty("keyStore") && project.hasProperty("password")) {
+                storeFile file(project.keyStore)
+                storePassword project.password
+                keyAlias "android"
+                keyPassword project.password
+            }
+
         }
     }
     buildTypes {
