--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
 
 repositories {
     maven {
+        url "https://maven.google.com/"
+    }
+    maven {
         url "https://repo.eclipse.org/content/repositories/paho-releases/"
     }
 }
