added permission to manifest

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -12,5 +12,9 @@
 
     <!-- Allows changing locales -->
 <!--    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <!--  callIntent  -->
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
 </manifest>
