--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:allowBackup="false"
@@ -30,6 +31,7 @@
                   android:parentActivityName=".devices.DevicesActivity"/>
         <activity android:name=".preferences.PreferencesActivity" android:label="@string/preferences"
                   android:parentActivityName=".devices.DevicesActivity"/>
-        <service android:name=".BluetoothLEService"/>
+        <service android:name=".BluetoothLEService"
+                 android:foregroundServiceType="location"/>
     </application>
 </manifest>
